wip: metrics
